<resources>
    <string name="app_name">Reesen</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="regName">First Name</string>
    <string name="regLastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="addImage">Add Profile Picture</string>
    <string name="chooseProfilePicture">Add a profile picture</string>
    <string name="registrationTitle">Come,\nJoin us\!</string>
    <string name="onlineText">Online</string>
    <string name="offlineText">Offline</string>
    <string name="buttonAccout">Account</string>
    <string name="buttonInbox">Inbox</string>
    <string name="splashScreenText">reesen</string>
    <string name="driver_inbox">Inbox</string>
    <string name="driver_profile">Profile</string>
    <string name="passenger_full_name">Full Name</string>
    <string name="passenger_phone_number">Phone Number:</string>
    <string name="passenger_phone_real_number">064123123</string>
    <string name="passenger_email">Email Address:</string>
    <string name="passenger_real_email">email@gmail.com</string>
    <string name="passenger_address">Home Address:</string>
    <string name="passenger_real_address">Kisacka 64a, Novi Sad</string>
    <string name="team_name">Uber Team 3</string>
    <string name="driver_full_name">Full Name</string>
    <string name="driver_phone_number">Phone Number:</string>
    <string name="driver_phone_real_number">064123123</string>
    <string name="driver_email">Email Address:</string>
    <string name="driver_real_email">email@gmail.com</string>
    <string name="driver_license_number">Drivers License:</string>
    <string name="driver_license_number_real">543543543</string>
    <string name="vehicle_registration_number">Car Registration\nnumber</string>
    <string name="vehicle_registration_real_number">123215543</string>
    <string name="blocked_text">ACCOUNT IS BLOCKED</string>
    <string name="active_text">ACCOUNT IS ACTIVE</string>
    <string name="driver_back">Home</string>
    <string name="ride_history">Ride History</string>
    <string name="driver_profile_long">See your profile</string>
    <string name="driver_inbox_long">See your messages</string>
    <string name="drive_history">History</string>
    <string name="drive_history_long">See your rides</string>
    <string name="driver_home">Home</string>
    <string name="description1">Description</string>
    <string name="user">username</string>
    <string name="driver_back_long">Back to the home page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My profile</string>
    <string name="messages">Messages</string>
    <string name="home_page">Home page</string>
    <string name="favorite_routes">Favorite routes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_clodr">Close navigation drawer</string>
    <string name="order_a_ride">Order a ride</string>
    <string name="contact_support">Contact support</string>
    <string name="time_and_date">18:30 11.11.2022.</string>
    <string name="last_message">Last message</string>
    <string name="contact_name">Contact name</string>
    <string name="or_register_using">Or Register Using</string>
    <string name="edit_pass_info">Edit Basic Info</string>
    <string name="reports">Reports</string>
    <string name="passenger_card_info">Card Information:</string>
    <string name="passenger_real_card_info">**********</string>
    <string name="driver_stats">Ride Statistics</string>
    <string name="start_driving">Start driving</string>
    <string name="end_driving">End driving</string>
    <string name="kilometers">Kilometers</string>
    <string name="number_of_passengers">Passengers</string>
    <string name="comments">Comments</string>
    <string name="rate">Rate</string>
    <string name="price">Price</string>
    <string name="start_station">Start station</string>
    <string name="end_station">End Station</string>
    <string name="inbox">Inbox</string>
    <string name="report">Report</string>
    <string name="user_name">Marko Kraljevic</string>
    <string name="mobile">+38160645897</string>
    <string name="choose_a_range">Choose a range</string>
    <string name="no_selected_date">No selected date!</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="email_address">Email Address</string>
    <string name="example_email">example@email.com</string>
    <string name="password_example">password123</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_account_register_now">New Account? Register now!</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="first_name">First Name</string>
    <string name="name_example">Bob</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_example">Ross</string>
    <string name="phone_number">Phone number</string>
    <string name="mobile_example">+381600000000</string>
    <string name="repeat_password">Repeat password</string>
    <string name="choose_a_profile_picture">Choose a profile picture:</string>
    <string name="choose">CHOOSE</string>
    <string name="change_info">Change Basic Information</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old:</string>
    <string name="enter_new_password">Enter New:</string>
    <string name="repeat_new_password">Repeat New:</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="edit_number">Edit Number:</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="paypal">Paypal</string>
    <string name="card">Card</string>
    <string name="change_payment_details">Change payment details</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_accept">Accept</string>
    <string name="reesen">reesen</string>
    <string name="log_out">Log out</string>
    <string name="choose_start_date">Choose Start Date:</string>
    <string name="choose_end_date">Choose End Date:</string>
    <string name="choose_date_from">From</string>
    <string name="choose_date_to">To</string>
    <string name="choose_period">Choose Period:</string>
    <string name="generate_report">Generate</string>
    <string name="go_back">Go Back</string>
    <string name="number_of_rejected_rides">Number of rejected rides</string>
    <string name="number_of_accepted_rides">Number of accepted rides</string>
    <string name="total_hours_worked">Total Hours Worked</string>
    <string name="total_income_rsd">Total income (RSD)</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="choose_date_range">Choose Date Range:</string>
    <string name="range">range</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_card_info">Edit Card Information</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="action_refresh">Refresh</string>
</resources>