<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/uber_green_lily"
    tools:context=".fragments.DriverAccountFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/relLayoutDriverAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">


            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/txtdriverFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="100dp"
                android:layout_toEndOf="@+id/imgAvatar"
                android:text="@string/driver_full_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtDrivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgAvatar"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/driver_phone_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtdriverPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgAvatar"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txtDrivPhone"
                android:text="@string/driver_phone_real_number"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtDrivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDrivPhone"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/driver_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtdriverEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDrivPhone"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txtDrivEmail"
                android:text="@string/driver_real_email"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtDrivHomeAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtdriverEmail"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDriverHomeAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtdriverEmail"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txtDrivHomeAddress"
                android:text="@string/passenger_real_address"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtDrivLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDrivHomeAddress"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/driver_license_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDriverLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDriverHomeAddress"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txtDrivLicense"
                android:text="@string/driver_license_number_real"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtCarReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDriverLicense"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/vehicle_registration_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCarRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDriverLicense"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/txtCarReg"
                android:text="@string/vehicle_registration_real_number"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <Button
                android:id="@+id/btnEditDriverInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCarRegistration"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:paddingVertical="10dp"
                android:text="@string/edit_pass_info"
                android:textSize="16sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relLayoutDriverAcc"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDriverStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_stats"

            />

        <Button
            android:id="@+id/btnDriverReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports" />


    </LinearLayout>

    <TextView
        android:id="@+id/txtDriverBlocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/active_text"
        android:textSize="26sp"
        android:textStyle="bold|italic" />


</RelativeLayout>