<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uber_green_lily"
    tools:context=".fragments.passanger.PassengerAccountFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/person" />

            <TextView
                android:id="@+id/txtPassengerFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="4dp"
                android:layout_marginTop="100dp"
                android:layout_toEndOf="@+id/imgAvatar"
                android:text="@string/passenger_full_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtPassPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgAvatar"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_phone_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPassengerPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgAvatar"
                android:layout_alignStart="@+id/txtPassPhone"
                android:layout_marginStart="144dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_phone_real_number"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtPassEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassPhone"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPassengerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassPhone"
                android:layout_alignStart="@+id/txtPassEmail"
                android:layout_marginStart="144dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_real_email"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtPassAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassEmail"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPassengerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassengerEmail"
                android:layout_alignStart="@+id/txtPassAddress"
                android:layout_marginStart="144dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_real_address"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/txtPassCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassAddress"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_card_info"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPassengerCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassengerAddress"
                android:layout_alignStart="@+id/txtPassCard"
                android:layout_marginStart="144dp"
                android:layout_marginTop="20dp"
                android:text="@string/passenger_real_card_info"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <Button
                android:id="@+id/btnEditPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPassengerCard"
                android:layout_toLeftOf="@+id/btnEditBasicPassInfo"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:paddingVertical="10dp"
                android:text="@string/edit_password"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnEditBasicPassInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPassengerCard"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:paddingVertical="10dp"
                android:text="@string/edit_pass_info"
                android:textSize="13sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewPass"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEditCardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_card_info"

            />
        <Button
            android:id="@+id/btnFavouriteRoutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_routes"

            />

        <Button
            android:id="@+id/btnPassengerReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports" />


    </LinearLayout>


    <TextView
        android:id="@+id/txtBlocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:letterSpacing="0.1"
        android:text="@string/active_text"
        android:textColor="@color/uber_off_white"
        android:textSize="21sp"
        android:textStyle="bold|italic" />


</RelativeLayout>